--- a/_posts/2018-08-06-leetcode 694.md
+++ b/_posts/2018-08-06-leetcode 694.md
@@ -1,7 +1,7 @@
 ---
 title: Dota2 Senate
 key: 20180806
-tags: TeXt
+tags: 刷题
 ---
 
 这是一道比较简单的循环队列的题目，只要比较R和D哪个在前，如果在前面的可以放到相应队列的末尾来做下一步的判定。直到如果有一个队列其长度为0，那么退出循环，返回另外一一个队列所代表的字母。
