--- a/_posts/2018-08-07-leetcode 201.md
+++ b/_posts/2018-08-07-leetcode 201.md
@@ -4,6 +4,24 @@ key: 20180808
 tags: 刷题
 ---
 
+Given a range [m, n] where 0 <= m <= n <= 2147483647, return the bitwise AND of all numbers in this range, inclusive.
+
+**Example 1:**
+
+```
+Input: [5,7]
+Output: 4
+```
+
+**Example 2:**
+
+```
+Input: [0,1]
+Output: 0
+```
+
+ 
+
 这道题的思路就是把所有这个范围内的数字全部相与，不难发现最后得出的数字应该是这部分数字的公共部分。所以只要把最大值n和最小值m的左边公共的部分取出来，然后右边添0就可以。
 
 ```c++
