--- a/_posts/2018-08-07-leetcode 49.md
+++ b/_posts/2018-08-07-leetcode 49.md
@@ -4,6 +4,25 @@ key: 20180808
 tags: 刷题
 ---
 
+Given an array of strings, group anagrams together.
+
+**Example:**
+
+```
+Input: ["eat", "tea", "tan", "ate", "nat", "bat"],
+Output:
+[
+  ["ate","eat","tea"],
+  ["nat","tan"],
+  ["bat"]
+]
+```
+
+**Note:**
+
+- All inputs will be in lowercase.
+- The order of your output does not matter.
+
 因为这道题是要求含有相同字母的序列，所以考虑到把所有字符串进行排序后，根据这个键值放到一个map中。如果排序后字符串相同，那么他们就含有相同的字母。
 
 ```c++
