--- a/_posts/2018-08-07-leetcode 365.md
+++ b/_posts/2018-08-07-leetcode 365.md
@@ -4,6 +4,30 @@ key: 20180807
 tags: 刷题
 ---
 
+You are given two jugs with capacities *x* and *y* litres. There is an infinite amount of water supply available. You need to determine whether it is possible to measure exactly *z* litres using these two jugs.
+
+If *z* liters of water is measurable, you must have *z* liters of water contained within **one or both buckets** by the end.
+
+Operations allowed:
+
+- Fill any of the jugs completely with water.
+- Empty any of the jugs.
+- Pour water from one jug into another till the other jug is completely full or the first jug itself is empty.
+
+**Example 1:** (From the famous [*"Die Hard"* example](https://www.youtube.com/watch?v=BVtQNK_ZUJg))
+
+```
+Input: x = 3, y = 5, z = 4
+Output: True
+```
+
+**Example 2:**
+
+```
+Input: x = 2, y = 6, z = 5
+Output: False
+```
+
 这道题要用到一个著名的定理裴蜀定理 。根据裴蜀定理 ，ax + by = d的解为 d = gcd(x, y)，那么我们只要只要z % d == 0，等式z = m * x + n * y 就有解， 所以问题就迎刃而解了，我们只要看z是不是x和y的最大公约数的倍数就行了。
 
 相应的裴蜀定理有关推论：a,b互质的充要条件是存在整数x,y使ax+by=1 
