--- a/_posts/2018-08-07-leetcode 844.md
+++ b/_posts/2018-08-07-leetcode 844.md
@@ -4,6 +4,48 @@ key: 20180807
 tags: 刷题
 ---
 
+Given two strings `S` and `T`, return if they are equal when both are typed into empty text editors. `#` means a backspace character.
+
+**Example 1:**
+
+```
+Input: S = "ab#c", T = "ad#c"
+Output: true
+Explanation: Both S and T become "ac".
+```
+
+**Example 2:**
+
+```
+Input: S = "ab##", T = "c#d#"
+Output: true
+Explanation: Both S and T become "".
+```
+
+**Example 3:**
+
+```
+Input: S = "a##c", T = "#a#c"
+Output: true
+Explanation: Both S and T become "c".
+```
+
+**Example 4:**
+
+```
+Input: S = "a#c", T = "b"
+Output: false
+Explanation: S becomes "c" while T becomes "b".
+```
+
+**Note**:
+
+1. `1 <= S.length <= 200`
+2. `1 <= T.length <= 200`
+3. `S` and `T` only contain lowercase letters and `'#'` characters.
+
+
+
 分情况讨论，用栈来进行模拟，时间和空间复杂度都是$O\left(n\right)$。第一种是栈内有元素并且当前符号为'#'，那么出栈，如果栈内每元素并且当前符号为'#'，不执行操作，其他情况将当前元素压入栈中。
 
 ```c++
