--- a/_posts/2018-08-07-leetcode 232.md
+++ b/_posts/2018-08-07-leetcode 232.md
@@ -28,7 +28,8 @@ queue.empty(); // returns false
 - You must use *only* standard operations of a stack -- which means only `push to top`, `peek/pop from top`, `size`, and `is empty`operations are valid.
 - Depending on your language, stack may not be supported natively. You may simulate a stack by using a list or deque (double-ended queue), as long as you use only standard operations of a stack.
 - You may assume that all operations are valid (for example, no pop or peek operations will be called on an empty queue).
-- 用栈来模拟一个队列，这道题思路就是用两个栈来对队列进行模拟。push和empty操作可以直接通过栈的方法来获得，但是top()和pop()要通过两个栈进行操作。进行top()就要把一个栈的元素压倒另一个栈中，然后取另外一个栈的top()，然后再把这个栈中的元素压回原来的栈中。pop()有点不同就是要把第二个栈中的元素pop掉。
+
+  用栈来模拟一个队列，这道题思路就是用两个栈来对队列进行模拟。push和empty操作可以直接通过栈的方法来获得，但是top()和pop()要通过两个栈进行操作。进行top()就要把一个栈的元素压倒另一个栈中，然后取另外一个栈的top()，然后再把这个栈中的元素压回原来的栈中。pop()有点不同就是要把第二个栈中的元素pop掉。
 
 ```c++
 class MyQueue {
