--- a/_posts/2018-08-13-leetcode 19.md
+++ b/_posts/2018-08-13-leetcode 19.md
@@ -21,48 +21,19 @@ tags: 刷题
   这道题就是要用两个指针来进行操作，要找到倒数第N个指针，只要p指针往后面扫N次，然后t和p指针同时往后扫，然后删除t->next这个节点即可。值得注意的是如果N等于链表的长度，那么删除的就是头结点，返回head->next即可。
 
 ```c++
-class MyQueue {
+class Solution {
 public:
-    stack<int> s1,s2;
-    MyQueue() {
-        
-    }
-    void push(int x) {
-        s1.push(x);
-    }
-    int pop() {
-    	int t;
-        while(!s1.empty()){
-        	t = s1.top();
-        	s1.pop();
-        	s2.push(t);
+    ListNode* removeNthFromEnd(ListNode* head, int n) {
+        ListNode* p = head;
+        ListNode* t = head;
+        for (int i = 0; i < n; ++i) p = p->next;
+        if (p == nullptr) return head->next;
+        while(p->next!=nullptr){
+        	p = p->next;
+        	t = t->next;
         }
-        int res = s2.top();
-        s2.pop();
-        while(!s2.empty()){
-        	t = s2.top();
-        	s2.pop();
-        	s1.push(t);
-        }
-        return res;
-    }
-    int peek() {
-        int t;
-        while(!s1.empty()){
-        	t = s1.top();
-        	s1.pop();
-        	s2.push(t);
-        }
-        int res = s2.top();
-        while(!s2.empty()){
-        	t = s2.top();
-        	s2.pop();
-        	s1.push(t);
-        }
-        return res;
-    }
-    bool empty() {
-        return s1.empty();
+        t -> next = t -> next->next;
+        return head;
     }
 };
 ```
