--- a/_posts/2018-08-06-leetcode 649.md
+++ b/_posts/2018-08-06-leetcode 649.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 649.Dota2 Senate
 key: 20180806
-tags: 刷题
+tags: 算法
 ---
 
 In the world of Dota2, there are two parties: the `Radiant` and the `Dire`.
