--- a/_posts/2018-08-07-leetcode 201.md
+++ b/_posts/2018-08-07-leetcode 201.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 201.Bitwise AND of Numbers Range
 key: 20180808
-tags: 刷题
+tags: 算法
 ---
 
 Given a range [m, n] where 0 <= m <= n <= 2147483647, return the bitwise AND of all numbers in this range, inclusive.
