--- a/_posts/2018-08-07-leetcode 365.md
+++ b/_posts/2018-08-07-leetcode 365.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 365.Water and Jug Problem
 key: 20180807
-tags: 刷题
+tags: 算法
 ---
 
 You are given two jugs with capacities *x* and *y* litres. There is an infinite amount of water supply available. You need to determine whether it is possible to measure exactly *z* litres using these two jugs.
