--- a/_posts/2018-08-07-leetcode 49.md
+++ b/_posts/2018-08-07-leetcode 49.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 49.Group Anagrams
 key: 20180808
-tags: 刷题
+tags: 算法
 ---
 
 Given an array of strings, group anagrams together.
