--- a/_posts/2018-08-13-leetcode 19.md
+++ b/_posts/2018-08-13-leetcode 19.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 19.Remove Nth Node From End of List
 key: 20180807
-tags: 刷题
+tags: 算法
 ---
 
 - Given a linked list, remove the *n*-th node from the end of list and return its head.
@@ -20,23 +20,25 @@ tags: 刷题
 
   这道题就是要用两个指针来进行操作，要找到倒数第N个指针，只要p指针往后面扫N次，然后t和p指针同时往后扫，然后删除t->next这个节点即可。值得注意的是如果N等于链表的长度，那么删除的就是头结点，返回head->next即可。
 
-```c++
-class Solution {
-public:
-    ListNode* removeNthFromEnd(ListNode* head, int n) {
-        ListNode* p = head;
-        ListNode* t = head;
-        for (int i = 0; i < n; ++i) p = p->next;
-        if (p == nullptr) return head->next;
-        while(p->next!=nullptr){
-        	p = p->next;
-        	t = t->next;
-        }
-        t -> next = t -> next->next;
-        return head;
-    }
-};
-```
+  ```c++
+  class Solution {
+  public:
+      ListNode* removeNthFromEnd(ListNode* head, int n) {
+          ListNode* p = head;
+          ListNode* t = head;
+          for (int i = 0; i < n; ++i) p = p->next;
+          if (p == nullptr) return head->next;
+          while(p->next!=nullptr){
+          	p = p->next;
+          	t = t->next;
+          }
+          t -> next = t -> next->next;
+          return head;
+      }
+  };
+  ```
+
+
 
 
 
