--- a/_posts/2018-08-07-leetcode 232.md
+++ b/_posts/2018-08-07-leetcode 232.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 232.Implement Queue using Stacks
 key: 20180807
-tags: 刷题
+tags: 算法
 ---
 
 Implement the following operations of a queue using stacks.
