--- a/_posts/2018-08-07-leetcode 844.md
+++ b/_posts/2018-08-07-leetcode 844.md
@@ -1,7 +1,7 @@
 ---
 title: leetcode 844.Backspace String Compare
 key: 20180807
-tags: 刷题
+tags: 算法
 ---
 
 Given two strings `S` and `T`, return if they are equal when both are typed into empty text editors. `#` means a backspace character.
