--- a/_posts/2018-08-13-Go入门（1）.md
+++ b/_posts/2018-08-13-Go入门（1）.md
@@ -122,3 +122,47 @@ func main() {
 }
 ```
 
+### 1.3找出重复行
+
+```go
+package main
+
+import (
+	"bufio"
+	"fmt"
+	"os"
+)
+
+func main() {
+	counts := make(map[string]int)
+	input := bufio.NewScanner(os.Stdin)
+	for input.Scan() {
+		counts[input.Text()]++
+	}
+	for line, n := range counts {
+		if n > 1 {
+			fmt.Println("%d\t%s\n", n, line)
+		}
+	}
+}
+```
+
+像C中的printf一样，fmt.Printf从一个表达式列表生成格式化的输出。Printf函数有超过10个这样的转义字符，Go中称作verb。下面是部分常用verb：
+
+| verb     | 描述     |
+| -------- | :------- |
+| %d  | 十进制整数 |
+| %x,%o,%b | 十六进制，八进制，二进制数 |
+| %f,%g,%e | 浮点数，如3.141593,3.141592653589793,3.141593e+00 |
+| %t | 布尔型:true或false |
+| %c | 字符（Unicode码点） |
+| %s | 字符串 |
+| %q | 带引号字符串（如"abc"）或者字符（'c'） |
+| %v | 内置格式的任何值 |
+| %T | 任何值的类型 |
+| %% | 百分号本身（无操作数） |
+
+map存储一个键/值对集合，并且提供常量时间的操作来存储、获取或测试集合中的某个元素。键可以是其值能够进行==比较的任意类型，值可以是任意类型。内置的函数make可以用来新建map。键再map中不存在时，会新建一个键并且将其对应的值初始化为0。
+
+### 1.4GIF图画
+
