--- a/_posts/2018-08-15-NIO初探.md
+++ b/_posts/2018-08-15-NIO初探.md
@@ -3,3 +3,73 @@ title: NIO初探（一）
 key: 201808015
 tags: Java NIO
 ---
+
+### 相关概要
+
+##### 缓冲区(Buffers)
+
+新的Buffer类是常规Java类和通道之间的纽带。原始数据元素组成的固定长度数组，封装在包含状态信息的对象中去，存入缓冲区。缓冲区提供了一个会合点：通道可提取放在缓冲区中的数据（写），也可想缓冲区存入数据供读取（读），还有一种特殊类型的缓冲区，用于内存映射文件。
+
+##### 通道(Channels)
+
+NIO新引入的最重要的的抽象是通道的概念。Channel对象模拟了通信连接，管道既可以是单向的，也可以是双向的。可以把通道想象成连接缓冲区和I/O服务的捷径。
+
+某些情况下，软件包中的旧类可以利用通道。为了能够想与文字或套接字关联的通道进行存取，适当的地方都增加了新方法。
+
+多数通道可工作在非块模式下，这意味着更好的可伸缩性，尤其是与选择器一同使用的时候。
+
+##### 文件锁定和内存映射文件(File locking and memory-mapped files)
+
+新的FileChannel对象包含在java.nio.channels软件包内，提供很多面向文件的新特性，其中最有趣的两个是文件锁定和内存映射文件。
+
+再多个进程协同工作的情况下，要协调各个进程对共享数据的访问，文件锁定是必不可少的工具。
+
+文件映射到内存，这样在您看来，磁盘上的文件数据就像是内存中一样。这里用了操作系统的虚拟内存功能，无需再内存中实际保留一份文件的拷贝，就可实现文件内容的动态高速缓存。
+
+##### 套接字(Sockets)
+
+套接字通道类为使用网络套接字实现交互提供了新方法。套接字通道可工作于非块模式，并可与选择器一同使用。因此，多个套接字可实现多路传输，管理效率也比java.net中提供的传统套接字效率更高。
+
+##### 选择器(Selectors)
+
+选择器可实现就绪性选择。Selector类提供了确定一或多个通道当前状态的机制。使用选择器，借助单一线程，就可以对数量庞大的活动I/O通道实施监控和维护。
+
+##### 正则表达式(Regular expressions)
+
+新的正则表达式API之所以被看成是NIO的组成部分，是因为JSR51把它与其他NIO特性放在一起做了详细说明。虽然它再很多方面与NIO的其他组成部分缺乏平行关系，但它再文件处理等众多领域都是极其有用的。
+
+##### 字符集(Character sets)
+
+java.nio.charsets提供了新类用于处理字符和字节流之间的映射关系。我们可以对字符转换映射方式进行选择，也可以自己创建映射。
+
+
+
+
+
+
+
+### 从I/O谈起
+
+##### I/O的重要性
+
+![fullsizerender](.\pic\fullsizerender.jpg)
+
+前三个行显示了处理阶段如何影响吞吐率。把单位处理时间减半，仅能提高吞吐率的2.2%。而另一方面，仅仅缩短I/O延迟10%，就可使吞吐率增加9.7%。影响程序执行效率的限定因素，往往并非处理速率，而是**I/O**。再I.O性能上的小小投入，就可以换来客观的汇报。
+
+然而，在大多数情况下，Java应用程序并非真的受着I/O的束缚。操作系统并非不能快速传递，让Java有事可做；相反是JVM在I/O方面效率欠佳。操作系统与Java基于流的I/O模型有些不匹配。操作系统移动的是大块数据（缓冲区），这往往是再硬件直接存储器（DMA）协助下完成的。而JVM的I/O流数据类喜欢操作小块数据——单个字节、几行文本，结果操作系统送来整缓冲区的数据，java.io的流数据类再花大量时间把他们拆成小块。往往拷贝一个小块就要往返于几层对象。操作系统喜欢整卡车地送来数据，java.io类则喜欢一铲子一铲子地加工数据。有了NIO，就可以轻松地把一卡车数据备份到能直接使用的地方(ByteBuffer对象)。
+
+JVM作为一把双刃剑，让Java程序员不再为操作系统环境的区别而烦恼，但是某些个性鲜明、功能强大的功能也被挡在门外。如果使用JNI(Java本地接口)，直接使用操作系统特性，那么就会被绑定在操作系统上。一旦有漏洞，还可能把JVM频繁出错甚至崩溃。如果作为操作系统开发商，可以在你的JVM中包含本地代码，以Java API地形式提供这些特性，但是这样做会违反所签署地相应协定。根据协议，只允许提供符合一致性要求的JVM。
+
+##### I/O概念
+
+为了理解NIO类如何模拟I/O函数，因此掌握操作系统层面的处理细节十分重要，这样才能理解新的I/O模型。以下概念十分的重要：
+
+* 缓冲区操作：缓冲区以及缓冲区如何工作，使所有I/O的基础。所谓的输入输出讲的无非是数据移进缓冲区或移出缓冲区。
+
+* 内核空间与用户控件
+* 虚拟内存
+* 分页技术
+* 面向文件的I/O和流I/O
+* 多工I/O（就绪性选择）
+
+未完待补
