--- a/_posts/2018-08-13-Go入门（1）.md
+++ b/_posts/2018-08-13-Go入门（1）.md
@@ -1,5 +1,5 @@
 ---
-title: Golang入门（一）
+title: Golang入门（一）：Go入门
 key: 20180807
 tags: Golang
 ---
@@ -163,6 +163,4 @@ func main() {
 | %% | 百分号本身（无操作数） |
 
 map存储一个键/值对集合，并且提供常量时间的操作来存储、获取或测试集合中的某个元素。键可以是其值能够进行==比较的任意类型，值可以是任意类型。内置的函数make可以用来新建map。键再map中不存在时，会新建一个键并且将其对应的值初始化为0。
-
-### 1.4GIF图画
 
