--- a/_posts/2018-08-16-Go入门（2）.md
+++ b/_posts/2018-08-16-Go入门（2）.md
@@ -4,4 +4,33 @@ key: 201808016
 tags: Golang
 ---
 
+### 名称
 
+Go中函数、变量、常量、类型、语句标签和包的名称遵循一个简单的规则：名称的开头是一个字母(Unicode中的字符即可)或下划线，后面可以跟任意数量的字符、字符或下划线，并区分大小写。
+
+> Go保留关键字：break   default   func   interface   select   case    defer    go    map    struct    chan    else    goto    package    switch    const    fallthrough    if    range    type    continue    for    import    return    var
+
+如果一个实体只在函数中声明，它只在函数局部有效。如果声明在函数外，将对暴力所有源文件可见。实体第一个字母的大小写决定其是否可见性跨包。大写的话，意味着可以背包外的其他程序所引用。包名本身总是由小写字母构成的。Go命名风格采用“驼峰式”。
+
+### 声明
+
+Go程序存储在一个或多个以.go为后缀的文件里。每一个文件以package生命开头，表明文件属于哪个包。package声明后面是import声明，然后也是包级别的类型、变量、常量、函数的声明，不区分顺序。
+
+```
+package main
+import "fmt"
+const boilingF = 212.0
+func main() {
+	var f = boilingF
+	var c = (f - 32) * 5 /9
+	fmt.Printf("boiling point = %g°F or %g °C"，f,c)
+}
+```
+
+常量boilingF是一个包级别的声明(main包)，f和c属于main函数的局部变量。包级别的尸体名字不仅对于包含其声明的源文件可见，而且对于同一个包的所有源文件都可见。
+
+函数声明包含一个名字、一个参数列表、一个可选的返回值列表以及函数体。如果函数不返回任何内容，返回值列表可以省略。
+
+### 变量
+
+未完待补
