--- a/_posts/2018-08-16-NIO初探（二）.md
+++ b/_posts/2018-08-16-NIO初探（二）.md
@@ -9,7 +9,7 @@ tags: Java NIO
 ##### 缓冲区基础
 
 * 容量：缓冲区能够容纳的数据元素的最大数量。这一容量在缓冲区创建时被设定，并且永远不能改变。
-* 上界：缓冲区的第一个不能读或写的元素。或者书缓冲区中显存元素的计数。
+* 上界：缓冲区的第一个不能读或写的元素。或者说缓冲区中现存元素的计数。
 * 位置：下一个要被读或写的元素的索引。位置会由自动由put()和get()函数进行更新
 * 标记：一个备忘位，调用mark()来设定mark = postion。调用reset()设定position = mark。
 
@@ -17,5 +17,103 @@ tags: Java NIO
 
 $0 \leq mark \leq position \ leq limit \leq left \leq capacity$
 
+下图是新创建的ByteBuffer
+
+![](http://p73rf095s.bkt.clouddn.com/18-8-16/90300912.jpg)
+
 ##### API
+
+要注意isReadOnly()函数。所有的缓冲区都可读，但是并非都可写，每个具体的缓冲区类都通过执行isReadOnly()来标示其是否允许该缓冲区的内容被修改。
+
+get()和put()都可以是相对或者绝对的。调用put时指出下一个元素应该被插入的位置，调用get时指出下一个元素应该从何处检索。
+
+看一个例子，将"hello"字符串的ASCII码载入一个名为buffer的ByteBuffer对象中。执行下面语句，缓冲区状态如图所示。
+
+```java
+buffer.put((byte)'H').put((byte)'e').put((byte)'l').put((byte)'l').put((byte)'o');
+```
+
+
+
+![](http://p73rf095s.bkt.clouddn.com/18-8-16/70592624.jpg)
+
+将"Hello"的ASCII码更改为"Mello"，可以通过这样来实现
+
+```java
+buffer.put(0,(byte)'M').put((byte)'w');
+```
+
+
+
+修改后缓冲区状态变化为
+
+![](http://p73rf095s.bkt.clouddn.com/18-8-16/98859353.jpg)
+
+如果我们已经写满了缓冲区，将准备将其清空，那么我们可以通过下面代码人工实现
+
+```java
+buffer.limit(buffer.position()).position(0);
+```
+
+也可以通过设计者预先设定好的Buffer.flip()函数实现。完成后结果变化为
+
+![](http://p73rf095s.bkt.clouddn.com/18-8-16/10947269.jpg)
+
+如果想释放，就可以从位置开始一起取到上界结束。bool hasRemaining()会在释放缓冲区时告诉你是否已经达到了缓冲区的上界。remaining()会告诉你从当前位置到上界的数目。
+
+>缓冲区并不是多线程安全的。如果你想以多线程同时存取特定的缓冲区，需要在存取之前进行同步。
+
+```java
+import java.nio.CharBuffer;
+
+public class test
+{
+    private static int index = 0;
+    private static String[] strings = {
+            "A random string value",
+            "The product of an infinite number of monkeys",
+            "Hey hey we're the Monkees",
+            "Opening act for the Monkees: Jimi Hendrix",
+            "'Scuse me while I kiss this fly",
+            "Help Me! Help Me!",
+    };
+
+    public static void main(String[] args)
+    {
+        CharBuffer buf = CharBuffer.allocate(128);
+        while (fillBuffer(buf))
+        {
+            buf.flip();
+            drainBuffer(buf);
+            buf.clear();
+        }
+    }
+
+    private static void drainBuffer(CharBuffer buffer)
+    {
+        while (buffer.hasRemaining())
+        {
+            System.out.println(buffer.get());
+        }
+    }
+
+    private static boolean fillBuffer(CharBuffer buffer)
+    {
+        if (index >= strings.length)
+        {
+            return false;
+        }
+        String string = strings[index++];
+        for (int i = 0; i < strings.length; i++)
+        {
+            buffer.put(string.charAt(i));
+        }
+        return true;
+    }
+}
+```
+
+上面是填充和释放缓冲区代码。但是有时想要释放部分数据，然后重新填充，为了实现这个功能，未读元素需要下移使得第一个元素索引为0。API也提供了compact()函数。这比直接使用put()和get()高效的多。
+
+![](http://p73rf095s.bkt.clouddn.com/18-8-16/96317214.jpg)
 
