--- a/_posts/2018-08-16-Go入门（2）.md
+++ b/_posts/2018-08-16-Go入门（2）.md
@@ -33,4 +33,20 @@ func main() {
 
 ### 变量
 
-未完待补
+var声明创建一个具体类型的变量，然后给它附加一个名字，设置它的初始值。
+
+```go
+var name type = expression
+```
+
+类型和表达式部分可以省略一个，但是不能都省略。如果类型省略，它的类型将由初始化表达式决定；如果表达式省略，其初始值对应于类型的0值。
+
+可以声明一个变量列表，并选择使用对应的表达式值列表对其初始化。忽略类型允许声明多个不同类型的变量。
+
+```go
+var i,j,k int
+var b,f,s = true,2.3,"four"
+```
+
+##### 短变量声明
+
