--- a/_posts/2018-08-16-Go入门（2）.md
+++ b/_posts/2018-08-16-Go入门（2）.md
@@ -50,3 +50,27 @@ var b,f,s = true,2.3,"four"
 
 ##### 短变量声明
 
+再**函数**中，一种称作短变量声明的可选性是可以用来声明和初始化**局部变量**，它使用name:expression的形式，name的类型由expression的类型来决定。
+
+```go
+anim := gif.Gif{LoopCount: nframes}
+freq := rand.Float64() * 3.0
+t := 0.0
+```
+
+var声明通常是因为那些跟初始化表达式类型不一致的局部变量保留的，或者用于后面才对变量赋值以及变量初始值不重要的情况。记住，:=表示声明，而=表示复制。一个变量的声明不能和多重复制搞混。
+
+在下列代码中，第一条语句生命了in和err。第二条语句仅声明了out，但向已有的err变量赋了值。短变量最少声明一个新变量，否则编译无法通过。
+
+##### 指针
+
+如果一个变量声明为var x int，表达式&x(x的地址)获取一个指向整形变量的指针，它的类型是整形指针(*int)。
+
+```go
+x := 1
+p := &x //p是整形指针，指向x
+fmt.Println(*p) //"1"
+*p = 2 
+fmt.Println(x) //"2" 
+```
+
