--- a/_posts/2018-08-16-Go入门（2）.md
+++ b/_posts/2018-08-16-Go入门（2）.md
@@ -50,7 +50,7 @@ var b,f,s = true,2.3,"four"
 
 ##### 短变量声明
 
-再**函数**中，一种称作短变量声明的可选性是可以用来声明和初始化**局部变量**，它使用name:expression的形式，name的类型由expression的类型来决定。
+在**函数**中，一种称作短变量声明的可选性是可以用来声明和初始化**局部变量**，它使用name:expression的形式，name的类型由expression的类型来决定。
 
 ```go
 anim := gif.Gif{LoopCount: nframes}
@@ -74,3 +74,56 @@ fmt.Println(*p) //"1"
 fmt.Println(x) //"2" 
 ```
 
+指针类型的零值是nil。如果该指针不等于nil，那么p指向一个变量。例如在下面代码中，通过f产生的函数局部变量v调用返回后依然存在。
+
+```go
+func f() *int {
+	v := 1
+	return &v
+}
+func main() {
+	fmt.Println(f() == f())//"false"
+}
+```
+
+这是因为分配给变量的地址并不相同。
+
+```go
+func main() {
+	fmt.Println(f())"0xc04200e098"
+	fmt.Println(f())"0xc04200e0d0"
+}
+```
+
+
+
+##### new函数
+
+除此之外，new也可以来创建一个具有唯一地址的不同变量。
+
+```go
+func main() {
+	p := new(int)
+	q := new(int)
+	fmt.Print(p == q)
+}
+```
+
+~~但是这有一个例外，两个变量的类型不携带任何信息且是零值，例如struct{}和[0]int。~~经过证实，到现在golang 1.10.3版本中，例子中的地址分配已经不同。
+
+```go
+func main() {
+	p := new([0]int)
+	q := new([0]int)
+	fmt.Print(p == q)//"false"
+}
+
+```
+
+##### 变量的生命周期
+
+判断垃圾是否可以回收可以用类似hotspot中的可达性分析法，选一作为GCRoot，根据引用链向下走，如果不能走到，那么判断其为垃圾。
+
+### 包和文件
+
+包让我们通过控制变量在包外的可见性或到处情况来隐藏信息。在Go里，通过一条简单的规则来管理标识符是否对外可见：导出的标识符以大写字母开头。
