--- a/_posts/2018-08-16-Go入门（2）.md
+++ b/_posts/2018-08-16-Go入门（2）.md
@@ -126,4 +126,19 @@ func main() {
 
 ### 包和文件
 
-包让我们通过控制变量在包外的可见性或到处情况来隐藏信息。在Go里，通过一条简单的规则来管理标识符是否对外可见：导出的标识符以大写字母开头。
+包让我们通过控制变量在包外的可见性或到处情况来隐藏信息。在Go里，通过一条简单的规则来管理标识符是否对外可见：导出的标识符以大写字母开头。	
+
+golang的初始化顺序：
+
+* 在 main 包中的 go 文件默认总是会被执行
+* 同包下的不同 go 文件，按照文件名“从小到大”排序顺序执行
+* 其他的包只有被 main 包 import 才会执行，按照 import 的先后顺序执行
+* 被递归 import 的包的初始化顺序与 import 顺序相反，例如：导入顺序 main –> A –> B –> C，则初始化顺序为 C –> B –> A –> main
+* 一个包被其它多个包 import，但只能被初始化一次
+
+- main 包总是被最后一个初始化，因为它总是依赖别的包
+- 避免出现循环 import，例如：A –> B –> C –> A
+- 在同一个文件中，常量、变量、init()、main() 依次进行初始化
+
+包的初始化在依赖已经解析完毕的情况下，根据依赖顺序进行。对于包级别的每一个变量，生命周期从其初始化开始。但是对于不能简单设置初始化值的变量，使用init函数。包的初始化按照在程序中导入的顺序来，以来顺序优先，每次初始化一个包。因此p导入包q，会保证q在p之前已经完全初始化。
+
