--- a/_posts/2018-09-02-JVM初步探索（二）.md
+++ b/_posts/2018-09-02-JVM初步探索（二）.md
@@ -4,7 +4,7 @@ key: 20180902
 tags: Java JVM
 ---
 
-##### 对象的创建
+### 对象的创建
 
 ![](https://images2015.cnblogs.com/blog/592743/201603/592743-20160319235423381-1926278401.png)
 
@@ -14,7 +14,7 @@ tags: Java JVM
 
 在高并发情况下，分配内存采用两种方法。一种是对分配内存的空间动作进行同步处理——实际上虚拟机采用CAS配上失败重试的方式保证操作的原子性；另一种是把内存分配的动作按照线程划分在不同的空间之中进行，即每个线程在Java堆中预先分配一小块内存TLAB。那个现诚邀分配内存，就在哪个线程的TLAB中进行分配，只有在TLAB用完并分配新的TLAB时，才需同步锁定。
 
-##### 内存布局
+### 内存布局
 
 对象头：
 
@@ -29,7 +29,7 @@ tags: Java JVM
 
 对齐填充：保证对象大小是8个字节的整数倍。
 
-##### 访问定位
+### 访问定位
 
 使用句柄：指向句柄池（保存实例对象的地址），通过句柄池找到引用对象：访问对象通过一个句柄指针一次间接索引之后，当对象实例数据被移动的时候(垃圾回收的时候有些对象会被移动)，只需要改变句柄池中该对象实例的地址即可，无需改变引用和句柄池的对应关系，所以引用中存储的是稳定的句柄地址。 
 
