--- a/_posts/2018-09-05-JVM初步探索（四）.md
+++ b/_posts/2018-09-05-JVM初步探索（四）.md
@@ -1,10 +1,10 @@
 ---
-title: JVM初步探索（四）：垃圾收集器
+title: JVM初步探索（四）：垃圾收集器与内存分配策略
 key: 20180905
 tags: Java JVM
 ---
 
-## 垃圾回收器与内存分配策略
+## 垃圾回收器
 
 
 
@@ -112,4 +112,47 @@ G1相对于CMS的区别在：
 
 
 
+## 内存分配与回收策略
+
+### 对象优先在Eden分配
+
+大多数情况下，对象优先在Eden曲进行分配。当Eden区没有足够的区域时，虚拟机将发生一次minor GC。
+
+```java
+public class ReferenceCountingGC
+{
+    private static final int _1MB = 1024 * 1024;
+
+    public static void main(String[] args)
+    {
+        byte[] allocation1, allocation2, allocation3, allocation4;
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        allocation4 = new byte[4 * _1MB];//出现一次minor GC
+    }
+}
+```
+
+这次GC结束之后，4MB的allocation4对象成功分配到Eden中，因此程序执行完成的结果是Eden占用4MB，Survivor空闲，老年代暂用6MB.
+
+### 大对象直接进入老年代
+
+大对象直接发配到老年代：大对象一般为大字符串或者大数组。在eden区因为使用复制算法每次执行GC，要移动对象，但大对象存活时间认为比较长，所以堆资源消耗较大
+
+### 长期存活的对象将进入老年代
+
+经历一次minor GC age++， 在JDK6之前，age默认15就会进入老年代。JDK7之后发生改变。
+
+### 空间分配担保
+
+新生代空间不足时，向老年代申请内存空间。在发生Minor GC时，虚拟机会检查老年代连续的空闲区域是否大于新生代所有对象的总和，若成立，则说明Minor GC是安全的，否则，虚拟机需要查看HandlePromotionFailure的值，看是否运行担保失败，若允许，则虚拟机继续检查老年代最大可用的连续空间是否大于历次晋升到老年代对象的平均大小，若大于，将尝试进行一次Minor GC；若小于或者HandlePromotionFailure设置不运行冒险，那么此时将改成一次Full GC，以上是JDK Update 24之前的策略，之后的策略改变了，只要老年代的连续空间大于新生代对象总大小或者历次晋升的平均大小就会进行Minor GC，否则将进行Full GC。
+
+### 动态对象年龄判定
+
+如果在Survivor空间中相同年龄所有对象大小的总和大于Survivor空间的一般，年龄大于或等于该年龄对象的对象就可以直接进入老年代。
+
+>新生代GC(Minor GC)：指发生在新生代的垃圾回收动作，因为Java对象大多数具备朝生夕灭的特性，所以Minor GC特别平凡，回收速度一般也比较快
+>
+>老年代GC(Major GC/Full GC)：老年代发生的GC，一般来说出现了Major GC，经常会伴随至少一次的Minor GC。
 
