--- a/_posts/2018-09-10-TCPIP学习之路（二）.md
+++ b/_posts/2018-09-10-TCPIP学习之路（二）.md
@@ -5,3 +5,27 @@ tags: 计算机网络 TCP/IP
 ---
 
 # Internet地址结构
+
+连接到Internet的每一个设备至少有一个IP地址，在任何情况下，IP路由器实现的转发程序实用IP地址来识别流量去向。
+
+## IP地址
+
+IPv4地址采用所谓的点分四组或点分十进制表示法，例如165.195.140.107。每一组数字的范围是0-255。IPv6中，地址长度是128位，表示方法是采用称为块或字段的四个十六进制数，由冒号分割，例如5f05:2000:80ad:5800:56:800:2023:1d71。为了解决造成不必要的混淆，IPv6必须遵守这些规则：
+
+* 前导的零必须压缩
+* ::只能使用一次并且只能用于压缩最多的0，例如2001:0db8:0:0:0:0:0:2可以简写位2001:db8::2，如果多个块中包含等长度的零，顺序靠前的块被替换为::
+* a-f的十六进制数应该用小谢表示
+
+## 基本的IP地址结构
+
+由于有大量的地址，IP地址可以根据类型和大小分组。大多数IPv4地址快被细分为一个地址，用于连接识别因特网或者其他的计算机网络接口，成为单播地址。IPv4中大多数地址为单播地址，IPv6地址空间大部分未被使用。
+
+### 分类地址
+
+![](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1536601689793&di=09e86442c2fad28bdf0626b025247c82&imgtype=0&src=http%3A%2F%2Fmy-1255788407.cos.ap-shanghai.myqcloud.com%2FIP%25E5%259C%25B0%25E5%259D%2580%25E4%25B8%25AD%25E7%25BD%2591%25E8%25B7%25AF%25E5%258F%25B7%25E5%25AD%2597%25E6%25AE%25B5%25E5%2592%258C%25E4%25B8%25BB%25E6%259C%25BA%25E5%258F%25B7%25E5%25AD%2597%25E6%25AE%25B5.png)
+
+每个单播地址都有一个IP网络部份，用于识别接口使用的IP地址在哪个网络总可以发现。
+
+### 子网寻址
+
+因特网在发展初期碰到一个困难，就是很难为新网段分配一个网络号，随着局域网的发展和增加，这个问题更加的棘手。
