--- a/_posts/2018-09-12-JVM初步探索（六）.md
+++ b/_posts/2018-09-12-JVM初步探索（六）.md
@@ -278,3 +278,20 @@ class Sub extends Super
 
 ## 类加载器
 
+- 启动类加载器：C++实现，虚拟机的一部分，用于加载javahome下的lib目录下的类
+- 扩展类加载器：加载javahome下/lib/ext目录中的类
+- 应用程序类加载器：加载用户类路径上的所指定的类库
+- 自定义类加载器
+  - 优势
+    - 高度的灵活性
+    - 通过自定义类加载器可以实现热部署
+    - 代码加密
+
+### 双亲委派模型
+
+1. 如果一个类加载器受到了类加载请求，它首先不会自己去尝试加载这个类，而是把类加载请求委派给父类加载器去完成
+2. 每一层的类加载器都把类加载请求给父类加载器，直到所有的类加载请求都应该传递给顶层的启动类加载器
+3. 如果顶层的启动类加载器无法完成加载请求，子类加载器去尝试去加载，如果连最初发起类加载请求的类加载器也无法完成加载请求时，将会抛出ClassNotFoundException，而不再调用其子类加载器去进行类加载
+
+双栖委派模式的类加载机制的优点是java类它的类加载器一起具备了一种带优先级的层次关系，越是基础的类，越是被上层的类加载器进行加载，保证了java程序的稳定性。例如java.lang.Object，放在rt.jar中，无论哪一个类加载器要加载这个类，最终都要委派内处于模型最顶端的类启动器进行加载，因此Object类在程序的个各类加载器环境中都是一个类。                                                                                                           ![](http://p73rf095s.bkt.clouddn.com/18-6-1/25672010.jpg)    
+
