--- a/_posts/2018-09-22-JVM初步探索（七）.md
+++ b/_posts/2018-09-22-JVM初步探索（七）.md
@@ -59,4 +59,56 @@ System.gc();
 
 ### 解析调用
 
-解析调用是指对那些“编译器可知，运行期不变”的方法的调用，这些方法在编译期就可以确定，并且在解析阶段转换为直接引用，之后就不会改变了。可以进行解析调用的方法有：构造方法、私有方法、final方法、父类方法，这些方法在运行期都是唯一的，不会改变
+解析调用是指对那些“编译器可知，运行期不变”的方法的调用，这些方法在编译期就可以确定，并且在解析阶段转换为直接引用，之后就不会改变了。可以进行解析调用的方法有：构造方法、私有方法、final方法、父类方法，这些方法在运行期都是唯一的，不会改变。
+
+### 分派
+
+#### 静态分派
+
+```java
+public class Test
+{
+    static abstract class Human
+    {
+
+    }
+
+    static class Man extends Human
+    {
+    }
+
+    static class Woman extends Human
+    {
+    }
+
+    public void sayHello(Human guy)
+    {
+        System.out.println("hello,guys");
+    }
+
+    public void sayHello(Man guy)
+    {
+        System.out.println("hello,gentleman");
+    }
+
+    public void sayHello(Woman guy)
+    {
+        System.out.println("hello,lady");
+    }
+
+    public static void main(String[] args)
+    {
+        Human man = new Man();
+        Human woman = new Woman();
+        Test sr = new Test();
+        sr.sayHello(man);
+        sr.sayHello(woman);
+    }
+}
+```
+
+运行结果：
+
+hello,guys
+hello,guys
+
