--- a/_posts/2018-08-16-NIO初探（二）.md
+++ b/_posts/2018-08-16-NIO初探（二）.md
@@ -6,7 +6,7 @@ tags: Java NIO
 
 ![](http://p73rf095s.bkt.clouddn.com/18-8-16/99802562.jpg)
 
-##### 缓冲区基础
+## 缓冲区基础
 
 * 容量：缓冲区能够容纳的数据元素的最大数量。这一容量在缓冲区创建时被设定，并且永远不能改变。
 * 上界：缓冲区的第一个不能读或写的元素。或者说缓冲区中现存元素的计数。
@@ -21,9 +21,11 @@ $0 \leq mark \leq position \leq limit \leq left \leq capacity$
 
 ![](http://p73rf095s.bkt.clouddn.com/18-8-16/90300912.jpg)
 
-##### API
+## API
 
 要注意isReadOnly()函数。所有的缓冲区都可读，但是并非都可写，每个具体的缓冲区类都通过执行isReadOnly()来标示其是否允许该缓冲区的内容被修改。
+
+### get与put
 
 get()和put()都可以是相对或者绝对的。调用put时指出下一个元素应该被插入的位置，调用get时指出下一个元素应该从何处检索。
 
@@ -48,6 +50,8 @@ buffer.put(0,(byte)'M').put((byte)'w');
 修改后缓冲区状态变化为
 
 ![](http://p73rf095s.bkt.clouddn.com/18-8-16/98859353.jpg)
+
+### flip
 
 如果我们已经写满了缓冲区，将准备将其清空，那么我们可以通过下面代码人工实现
 
@@ -113,7 +117,21 @@ public class test
 }
 ```
 
+### compact
+
 上面是填充和释放缓冲区代码。但是有时想要释放部分数据，然后重新填充，为了实现这个功能，未读元素需要下移使得第一个元素索引为0。API也提供了compact()函数。这比直接使用put()和get()高效的多。
 
-![](http://p73rf095s.bkt.clouddn.com/18-8-16/96317214.jpg)
+[![iMp6xA.md.png](https://s1.ax1x.com/2018/09/26/iMp6xA.md.png)](https://imgchr.com/i/iMp6xA)
+
+
+
+进行compact后，上图变成下图所示：
+
+![compact后](http://p73rf095s.bkt.clouddn.com/18-8-16/96317214.jpg)
+
+简而言之，进行compact()就是丢弃已经释放的数据，保留未释放的数据。
+
+### mark
+
+缓冲区mark()在调用之前是未被定义的，调用时标记被设为当前位置的值。reset( )函数将位置设为当前的标记值。如果标记值未定义,调用 reset( )将导致 InvalidMarkException 异常。
 
