--- a/_posts/2018-08-16-NIO初探（二）.md
+++ b/_posts/2018-08-16-NIO初探（二）.md
@@ -135,3 +135,22 @@ public class test
 
 缓冲区mark()在调用之前是未被定义的，调用时标记被设为当前位置的值。reset( )函数将位置设为当前的标记值。如果标记值未定义,调用 reset( )将导致 InvalidMarkException 异常。
 
+## 创建缓冲区
+
+缓冲区共有八种种类，分别对应除了boolen类型的java基本属性和MappedByteBuffer（ByteBuffer专门用于内存映射文件的一种特例）。新的缓冲区由分配或者包装创建，分配操作创建一个缓冲区对象并分配一个私有的空间来存储容量大小的数据元素。包装创建一个缓冲区对象但是不分配任何空间来存储元素，但是使用所提供的数组来存储缓冲区中的数据元素。
+
+>分配：
+>
+>```java
+>CharBuffer charBuffer = CharBuffer.allocate(100);
+>```
+>
+>包装：
+>
+>```java
+>char[] myArray = new char[100];
+>CharBuffer charbuffer = CharBuffer.wrap(myArray);
+>```
+
+但是直接使用包装因为数据保存在数组中，意味着调用put函数造成的对缓冲区的改动会直接影响这个数组，用带有offset和length作为参数的wrap()函数会构造一个根据参数所提供的缓冲区。
+
