--- a/_posts/2018-09-28-leetcode 377.md
+++ b/_posts/2018-09-28-leetcode 377.md
@@ -61,4 +61,22 @@ public:
 
 
 
+因为这个数组没有重复的元素，所以从i-nums[j]变成i只有dp[i]种可能，遍历求和即可。
+
+```c++
+class Solution {
+public:
+    int combinationSum4(vector<int>& nums, int target) {
+        if(nums.size()==0) return 0;
+        vector<int> dp(target+1, 0);
+        dp[0] = 1;
+        for(int i =1; i <= target; i++)
+        {
+            for(auto val: nums)
+                if(val <= i) dp[i] += dp[i-val];
+        }
+        return dp[target];
+    }
+};
+```
 
