--- a/_posts/2018-08-16-NIO初探（二）.md
+++ b/_posts/2018-08-16-NIO初探（二）.md
@@ -154,3 +154,9 @@ public class test
 
 但是直接使用包装因为数据保存在数组中，意味着调用put函数造成的对缓冲区的改动会直接影响这个数组，用带有offset和length作为参数的wrap()函数会构造一个根据参数所提供的缓冲区。
 
+>```java
+>CharBuffer charBuffer = CharBuffer.wrap(myArray,12,42);
+>```
+
+## 复制缓冲区
+
