--- a/_posts/2018-09-10-TCPIP学习之路（二）.md
+++ b/_posts/2018-09-10-TCPIP学习之路（二）.md
@@ -28,4 +28,11 @@ IPv4地址采用所谓的点分四组或点分十进制表示法，例如165.195
 
 ### 子网寻址
 
-因特网在发展初期碰到一个困难，就是很难为新网段分配一个网络号，随着局域网的发展和增加，这个问题更加的棘手。
+因特网在发展初期碰到一个困难，就是很难为新网段分配一个网络号，随着局域网的发展和增加，这个问题更加的棘手。为了解决这个问题，不是把IP地址看成由单纯的一个网络号和一个主机号组成，而是把主机号再分成一个子网号和一个主机号。
+
+### 子网掩码
+
+子网掩码是由一台主机或路由器使用的分配位，以确定如何从一台主机对应IP地址中获得网络和子网信息。掩码由路由器和主机使用，来确定一个IP地址的网络/子网部分的结束和主机部分的开始。由于站点之外的路由器作出决策只机遇地址的网络号部分，并不需要子网掩码的知识，注意到子网掩码纯粹是站点内部的局部问题。
+
+### 可变长度子网掩码
+
