--- a/_posts/2018-10-10-leetcode 540.md
+++ b/_posts/2018-10-10-leetcode 540.md
@@ -28,7 +28,7 @@ public:
 };
 ```
 
-但是这道题这样的解法并不是最优，最优的方法是采用二分就能够查找得到。因为整个数组的大小为奇数个，所以单个元素肯定存在与两个子数组中元素为技术的那个
+但是这道题这样的解法并不是最优，最优的方法是采用二分就能够查找得到。因为整个数组的大小为奇数个，所以单个元素肯定存在与两个子数组中元素为奇数的那个
 
 ```c++
 lass Solution {
