--- a/_posts/2018-10-10-leetcode 540.md
+++ b/_posts/2018-10-10-leetcode 540.md
@@ -4,6 +4,28 @@ key: 20181010
 tags: 算法
 ---
 
+Given a sorted array consisting of only integers where every element appears twice except for one element which appears once. Find this single element that appears only once.
+
+**Example 1:**
+
+```
+Input: [1,1,2,3,3,4,4,8,8]
+Output: 2
+```
+
+
+
+**Example 2:**
+
+```
+Input: [3,3,7,7,10,11,11]
+Output: 10
+```
+
+
+
+**Note:** Your solution should run in O(log n) time and O(1) space.
+
 这道题的题意就是在一个已经排好序的数组中，查找一个元素只出现一次，但是其他元素出现两次。
 
 这道题刚开始的时候自己的想法很简单，就是线性的去查找数组中的每一个元素，如果这个元素和左右两个不相同，这个元素就出现了一次，对于首尾进行特殊处理。这样的算法复杂度为$O\left(n\right)$
