--- a/_posts/2018-09-12-学习Java并发（一）.md
+++ b/_posts/2018-09-12-学习Java并发（一）.md
@@ -1,8 +1,18 @@
 ---
-title: 学习Java并发（一）：基础知识
+title: 学习Java并发（一）：线程安全性
 key: 20181015
 tags: Java 并发编程
 ---
 
-# 基础知识
+# 线程安全性
+
+## 什么是线程安全
+
+当多个线程访问某个类时，不管运行时环境采用何种调度方式或者这些线程如何交替执行，并且在主调代码中不需要任何额外的同步或协同，这个类都能表现出正确的行为，那么就称这个类是线程安全的。在线程安全类中封装了必要的同步机制，因此客户端无需进一步采取同步措施。
+
+## 原子性
+
+### 竞态条件
+
+
 
