--- a/_posts/2018-08-24-Go入门（3）.md
+++ b/_posts/2018-08-24-Go入门（3）.md
@@ -5,5 +5,45 @@ tags: Golang
 ---
 
 ### 整数
-Go的数值类型具有符号数和无符号整数。有符号整数分为四种大小：8位、16位、32位、64位，用int8、int16、int32、int64表示，对应的无符号整数为uint8、uint16、uint32、uint64。此外还有两种类型int和uint。在特定平台上，其大小与原生的有符号/无符号整数类型大小相等，或等于该平台上运算效率最高的值。其中rune类是int32类型的同义词，常常用于知名一个值是Unicode码点。同样byte类型是uint8类型的同义词。
+Go的数值类型具有符号数和无符号整数。有符号整数分为四种大小：8位、16位、32位、64位，用int8、int16、int32、int64表示，对应的无符号整数为uint8、uint16、uint32、uint64。此外还有两种类型int和uint。在特定平台上，其大小与原生的有符号/无符号整数类型大小相等，或等于该平台上运算效率最高的值。其中rune类是int32类型的同义词，常常用于知名一个值是Unicode码点。同样byte类型是uint8类型的同义词。最后还有一个无符号整数uintptr，大小不明确，但可以完整存放指针。
 
+int、uint和uinptr都有别于其大小明确的相似类型的类型，也就是说int值若要当做int32使用，必须显示转换。
+
+### 浮点数
+
+Go具有两种大小的浮点数float32和float64，遵从IEE754标准。
+
+### 复数
+
+Go具备两种大小的复数complex64和complex128，二者分别由float32和float64构成。内置的complex函数根据给定的实部和虚部创建复数，而内置的real函数和imag函数则分别提取复数的实部和虚部:
+
+```go
+var x complex128 = complex(1,2)// 1+2i
+var y complex128 = complex(3,4)// 3+4i
+fmt.Println(x*y)			   // (-5+10i)
+fmt.Println(real(x*y))		   // -5
+fmt.Println(imag(x*y))		   // 10
+fmt.Print(1i * 1i)             // (-1+0i)
+```
+
+### 布尔值
+
+bool型的值或布尔值的只有两种可能：真或假。运算符&&和||会导致短路行为
+
+### 字符串
+
+字符串是**不可变**的字节序列，它可以包含任意数据，包含0值字节。习惯上文本字符串被解读为UTF-8的Unicode码点。子串生成操作s[i:j]生成一个新的字符串，内容取自原字符串的字节，下标从i开始直到j(不包含j)。i和j的默认值分别是0和len(s)，若省略其中之一或者两者，则取默认值。
+
+字符串不可改变，所以字符串内部的数据不允许修改：
+
+```go
+s[0] = 'L'// 编译错误:s[0]无法赋值
+```
+
+不可改变意味着两个字符能安全地共用同一段底层内存，使得复制任意长度字符串长度的开销都为$O\left(1\right)$。
+
+### 常量
+
+常亮是一种表达式，其可以保证在编译阶段就计算出表达式的值，并不需要等到运行时从而使编译器得已知晓其值。所有常量本质上都属于基本类型。
+
+许多针对常量的计算完全可以在编译时就完成，以减免运行时的工作量并让其他编译器优化得以实现。某些错误通常要在运行时才能检测到，但如果操作数是常量，编译时就会报错。对于常量操作数，所有数学运算、逻辑运算和比较运算的结果依然是常量，常量的类型转换结果和某些内置函数的返回值例如len,cap等同样是常量。
