--- a/_posts/2018-12-18-Go入门（5）.md
+++ b/_posts/2018-12-18-Go入门（5）.md
@@ -1,8 +1,247 @@
 ---
-title: Golang入门（⑤）：函数与
+title: Golang入门（五）：函数
 key: 20181215
 tags: Golang
 ---
 
 ## 函数类型
 
+每个函数生命都包含一个名字、一个形参列表、一个可选的返回列表以及函数体:
+
+```go
+func name(parameter-list)(result-list){
+    body
+}
+
+
+func hypot(x,y float64)float64{
+    return math.Sqrt(x*x+y*y)
+}
+fmt.Println(hypot(3,4)) // 5
+```
+
+返回值也可以像形参一样命名。这个时候每一个命名的返回值都会声明为一个局部变量，并根据变量类型初始化为相应的０值。
+
+```go
+func add(x int, y int) int   { return x + y }
+func sub(x, y int) (z int)   { z = x - y; return }
+func first(x int, _ int) int { return x }
+func zero(int, int) int      { return 0 }
+```
+
+## 多返回值
+
+一个函数可能返回不止一个结果。下面是一个HTTP的GET请求，解析返回的HTML页面，并返回所有的链接
+
+```go
+func findLinks(url string) ([]string, error) {
+	resp, err := http.Get(url)
+	if err != nil {
+		return nil, err
+	}
+	if resp.StatusCode != http.StatusOK {
+		resp.Body.Close()
+		return nil, fmt.Errorf("getting %s: %s", url, resp.Status)
+	}
+	doc, err := html.Parse(resp.Body)
+	resp.Body.Close()
+	if err != nil {
+		return nil, fmt.Errorf("parsing %s as HTML: %v", url, err)
+	}
+	return visit(nil, doc), nil
+}
+```
+
+一个函数如果有命名的返回值，可以省略return语句的操作数，这成为裸返回
+
+```
+func sub(x, y int) (z int,s string)   { z = x - y;s = "golang"; return }
+```
+
+## 错误
+
+如果当函数调用发生错误时返回一个附加的结果作为错误值，习惯上将错误值作为最后一个结果返回。如果错误只有一种情况，结果通常设置为布尔类型。
+
+## 函数变量
+
+函数类型的零值是nil，调用一个空函数变量将导致宕机。
+
+```go
+var f func(int) int
+f(3) //宕机：调用空函数
+```
+
+函数变量可以和空值进行比较，但是他们本身不可相互比较，所以不可以作为键值出现在map中。
+
+## 匿名函数
+
+命名函数只能在包级别的作用一进行生命，但我们可以使用函数字面量在任何表达式内指定函数变量。函数字面量就像函数声明，但在func关键字后面没有函数的名称。
+
+```go
+strings.Map(func(r rune)rune{return r+1},
+"HAL-9000")	//"IBM.:111"
+```
+
+更重要的是，以r这种方式定义的函数能够获取到整个词法环境，因此里层的函数可以使用外层函数中的变量
+
+```go
+func squres() func() int{
+	var x int
+	return func() int {
+		x++
+		return x*x
+	}
+}
+func main() {
+	f := squres()
+	fmt.Println(f()) // 1
+	fmt.Println(f()) // 4
+	fmt.Println(f()) // 9
+	fmt.Println(f()) // 16
+}
+```
+
+再一次看这个例子里变量的生命周期并不是由它的作用于所决定的：变量x在main函数中返回squares函数后依旧存在
+
+## 变长函数
+
+变长函数被调用的时候可以有可变的参数个数，用省略号表示声明一个变长函数
+
+```go
+func sum(vals ...int)int{
+    total := 0
+    for _,val :=range vals{
+        total += val
+    }
+    return total
+}
+fmt.Println(sum(1,2,3,4)) // 10
+valus := []int{1,2,3,4}
+fmt.Println(sum(valus))   // 10
+```
+
+## 延迟函数调用
+
+在golang当中，defer代码块会在函数调用链表中增加一个函数调用。这个函数调用不是普通的函数调用，而是会在函数正常返回，也就是return之后添加一个函数调用。因此，defer通常用来释放函数内部变量。
+
+为了更好的学习defer的行为，我们首先来看下面一段代码:
+
+```
+func CopyFile(dstName, srcName string) (written int64, err error) {
+src, err := os.Open(srcName)
+if err != nil {
+return
+}
+
+dst, err := os.Create(dstName)
+if err != nil {
+return
+}
+
+written, err = io.Copy(dst, src)
+dst.Close()
+src.Close()
+return
+}
+```
+
+这段代码可以运行，但存在'安全隐患'。如果调用dst, err := os.Create(dstName)失败，则函数会执行return退出运行。但之前创建的src(文件句柄)没有被释放。 上面这段代码很简单，所以我们可以一眼看出存在文件未被释放的问题。 如果我们的逻辑复杂或者代码调用过多时，这样的错误未必会被及时发现。 而使用defer则可以避免这种情况的发生，下面是使用defer的代码:
+
+```
+func CopyFile(dstName, srcName string) (written int64, err error) {
+src, err := os.Open(srcName)
+if err != nil {
+return
+}
+defer src.Close()
+
+dst, err := os.Create(dstName)
+if err != nil {
+return
+}
+defer dst.Close()
+
+return io.Copy(dst, src)
+}
+```
+
+通过defer，我们可以在代码中优雅的关闭/清理代码中所使用的变量。defer作为golang清理变量的特性，有其独有且明确的行为。以下是defer三条使用规则。
+
+### 规则一 当defer被声明时，其参数就会被实时解析
+
+我们通过以下代码来解释这条规则:
+
+```
+func a() {
+	i := 0
+	defer fmt.Println(i)
+	i++
+	return
+}
+```
+
+上面我们说过，defer函数会在return之后被调用。那么这段函数执行完之后，是不用应该输出1呢？
+
+读者自行编译看一下，结果输出的是0. why？
+
+这是因为虽然我们在defer后面定义的是一个带变量的函数: fmt.Println(i). 但这个变量(i)在defer被声明的时候，就已经确定其确定的值了。 换言之，上面的代码等同于下面的代码:
+
+```
+func a() {
+	i := 0
+	defer fmt.Println(0) //因为i=0，所以此时就明确告诉golang在程序退出时，执行输出0的操作
+	i++
+	return
+}
+```
+
+为了更为明确的说明这个问题，我们继续定义一个defer:
+
+```
+func a() {
+	i := 0
+	defer fmt.Println(i) //输出0，因为i此时就是0
+	i++
+	defer fmt.Println(i) //输出1，因为i此时就是1
+	return
+}
+```
+
+通过运行结果，可以看到defer输出的值，就是定义时的值。**而不是defer真正执行时的变量值(很重要，搞不清楚的话就会产生于预期不一致的结果)**
+
+但为什么是先输出1，在输出0呢？ 看下面的规则二。
+
+### 规则二 defer执行顺序为先进后出
+
+当同时定义了多个defer代码块时，golang安装**先定义后执行**的顺序依次调用defer。不要为什么，golang就是这么定义的。我们用下面的代码加深记忆和理解:
+
+```
+func b() {
+	for i := 0; i < 4; i++ {
+		defer fmt.Print(i)
+	}
+}
+```
+
+在循环中，依次定义了四个defer代码块。结合规则一，我们可以明确得知每个defer代码块应该输出什么值。 安装先进后出的原则，我们可以看到依次输出了3210.
+
+### 规则三 defer可以读取有名返回值
+
+先看下面的代码:
+
+```
+func c() (i int) {
+	defer func() { i++ }()
+	return 1
+}
+```
+
+输出结果是12. 在开头的时候，我们说过defer是在return调用之后才执行的。 这里需要明确的是defer代码块的作用域仍然在函数之内，结合上面的函数也就是说，defer的作用域仍然在c函数之内。因此defer仍然可以读取c函数内的变量(如果无法读取函数内变量，那又如何进行变量清除呢....)。
+
+当执行return 1 之后，i的值就是1. 此时此刻，defer代码块开始执行，对i进行自增操作。 因此输出2.
+
+掌握了defer以上三条使用规则，那么当我们遇到defer代码块时，就可以明确得知defer的预期结果。
+
+## 恢复
+
+recover()用法是：将recover()写在defer中，并且在可能发生panic的地方之前，先调用此defer的东西（让系统方法域结束时，有代码要执行。）当程序遇到panic的时候（当然，也可以正常的调用出现的异常情况），系统将跳过后面的代码，进入defer，如果defer函数中recover()，则返回捕获到的panic的值。
