--- a/_posts/2019-1-5-Redis源码剖析(2).md
+++ b/_posts/2019-1-5-Redis源码剖析(2).md
@@ -4,3 +4,40 @@ key: 20190105
 tags: Redis
 ---
 
+## 链表
+
+链表在Redis中的应用十分广泛，比如列表键中的底层实现之一就是链表。当一个列表键包含了数量较多的元素，或者列表中包含的元素都是比较长的字符串时，Redis就会使用链表作为列表键的底层实现。
+
+### 链表和链表节点的实现
+
+```c
+typedef struct listNode {
+    struct listNode *prev;
+    struct listNode *next;
+    void *value;
+} listNode;
+
+typedef struct listIter {
+    listNode *next;
+    int direction;
+} listIter;
+
+typedef struct list {
+    listNode *head;
+    listNode *tail;
+    void *(*dup)(void *ptr);
+    void (*free)(void *ptr);
+    int (*match)(void *ptr, void *key);
+    unsigned long len;
+} list;
+```
+
+采取双向链表来构成，其中dup函数用来复制链表节点所保存的值，free函数用于释放链表节点所保存的值，match函数用来比较链表节点所保存的值和另一个输入值是否相等。
+
+Redis链表实现特性可以总结为:
+
+* 双端链表
+* 无环
+* 待表头指针和表尾指针
+* 带链表长度计数值
+* 多态：链表节点使用void*类型来保存节点值，并且可以通过list结构的dup,free,match三个属性为节点值设置特定类型函数，所以链表可以保存各种不同类型的值
