--- a/_posts/2020-1-28-守护进程编写规则.md
+++ b/_posts/2020-1-28-守护进程编写规则.md
@@ -10,3 +10,6 @@ tags: Linux
 4. 将当前工作目录更改为跟目录。从父进程处继承过来的当前工作目录可能在一个挂载的文件系统中。因为守护进程通常在系统再引导之前是一直存在的，所以如果守护进程的当前工作目录在一个挂载的文件系统中，那么该文件系统就不能被卸载
 5. 关闭不需要的文件描述符。这使守护进程不再持有从父进程继承来的任何文件描述符（父进程可能是shell进程，或某个其他进程）
 6. 某些守护进程打开/dev/null使其具有文件描述符0、1和2，这样，任何一个试图读标准输入、写标准输出或标准错误的库例程都不会产生任何效果。因为守护进程并不与终端设备相关联，所以其输出无处显示，也无处从交互式用户那里接受输入。即使守护进程是从交互式会话启动的，但是守护进程是在后台运行的，所以登陆会话的终止并不影响守护进程。如果其他用户在同一终端设备上登陆，我们不希望在该终端上见到守护进程的输出，用户也不期望他们在终端上的输入被守护进程读取
+
+> 注：守护进程不接受来自内核的SIGUP ，SIGINT , SIGWINCH信号，很多守护进程把它作为通知信号，表示配置文件已经发生改变，守护进程应该重新读入其配置文件
+
