--- a/_posts/2020-2-4-Linux掉电保护问题.md
+++ b/_posts/2020-2-4-Linux掉电保护问题.md
@@ -4,19 +4,19 @@ key: 20200204
 tags: Linux
 ---
 
-## 掉电导致write()的数据丢失破解法
+# 掉电导致write()的数据丢失破解法
 
 延迟写（delayed write）: 传统的UNIX实现在内核中设有缓冲区高速缓存或页面高速缓存，大多数磁盘I/O都通过缓冲进行。 当将数据写入文件时，内核通常先将该数据复制到其中一个缓冲区中，如果该缓冲区尚未写满，则 并不将其排入输出队列，而是等待其写满或者当内核需要重用该缓冲区以便存放其他磁盘块数据时， 再将该缓冲排入到输出队列，然后待其到达队首时，才进行实际的I/O操作。这种输出方式就被称为延迟写。
 
-#### 直接I/O：直接访问物理磁盘：
+## 直接I/O：直接访问物理磁盘：
 
 O_DIRECT：绕过内核缓冲区。记得要用posix_memalign管理内存对齐
 
-#### open文件时用O_SYNC选项：
+## open文件时用O_SYNC选项：
 
 同步选项【把数据直接同步到磁盘】,只针对write函数有效，使每次write()操作等待物理I/O操作的完成；具体说，就是将写入内核缓冲区的数据立即写入磁盘，将掉电等问题造成的损失减到最小；每次写磁盘数据，务必要大块大块写，一般都512-4k 4k的写；不要每次只写几个字节，否则速度过慢；
 
-#### 缓存同步：尽量保证缓存数据和写道磁盘上的数据一致；
+## 缓存同步：尽量保证缓存数据和写道磁盘上的数据一致；
 
 1. sync(void)：将所有修改过的块缓冲区排入写队列；然后返回，并不等待实际写磁盘操作结束，数据是否写入磁盘并没有保证；
 
