--- a/_posts/2020-2-10-epoll分析.md
+++ b/_posts/2020-2-10-epoll分析.md
@@ -61,9 +61,9 @@ tags: Linux
 
 
 
- ## epoll_wait()函数*
+ ## epoll_wait()函数
 
-> 格式：int epoll_wait(int epfd,struct epoll_event \*events,int maxevents,int timeout);
+> int epoll_wait(int epfd,struct epoll_event \*events,int maxevents,int timeout);
 
   功能：阻塞一小段时间并等待事件发生，返回事件集合，也就是获取内核的事件通知；说白了就是遍历这个双向链表，把这个双向链表里边的节点数据拷贝出去，拷贝完毕的就从双向链表里移除；因为双向链表里记录的是所有有数据/有事件的socket【TCP连接】；
 
@@ -71,7 +71,7 @@ tags: Linux
 2. events：是内存，也是数组，长度 是maxevents，表示此次epoll_wait调用可以手机到的maxevents个已经继续【已经准备好的】的读写事件；说白了，就是返回的是 实际 发生事件的tcp连接数目；
 3. 参数timeout：阻塞等待的时长；
 
-  *//epitem结构设计的高明之处：既能够作为红黑树中的节点，又能够作为双向链表中的节点；*
+  epitem结构设计的高明之处：既能够作为红黑树中的节点，又能够作为双向链表中的节点；
 
 
 
