--- a/_posts/2020-3-2-构造函数.md
+++ b/_posts/2020-3-2-构造函数.md
@@ -9,5 +9,12 @@ tags: C++
 
 1. 包含一个类类型成员(假设为A a)，而a对象有一个缺省的构造函数，此时编译器会为该类合成一个默认的构造函数，并在其中调用a对象缺省的构造函数。
 2. 父类含有缺省的构造函数，子类没有任何构造函数。为了调用父类的构造函数，会为子类很成一个默认构造函数，并在其中调用父类的缺省的构造函数。
-3. 一个类含有虚函数，但是没有任何构造函数，编译器会为我们生成并生成默认的构造函数，并在其中生成虚函数表，把该类的虚函数表的地址赋值给虚函数表指针。
+3. 一个类含有虚函数，但是没有任何构造函数，编译器会为我们生成默认的构造函数，并在其中生成虚函数表，把该类的虚函数表的地址赋值给虚函数表指针。
 4. 一个类带有虚基类，会为子类和父类生成默认的构造函数。
+
+## C++何时会合成拷贝构造函数
+
+1. 包含一个类类型成员(假设为A a)，而a对象有一个拷贝构造函数，此时编译器会为该类合成一个拷贝构造函数。如果只是一些成员变量值得拷贝，编译器不会专门很撑拷贝构造函数得。
+2. 父类含有拷贝构造函数，子类没有拷贝构造函数。为了调用父类的拷贝构造函数，会为子类很成一个拷贝构造函数，并在其中调用父类的拷贝构造函数。
+3. 一个类含有虚函数，但是没有拷贝构造函数，编译器会为我们生成拷贝构造函数，并在其中生成虚函数表，把该类的虚函数表的地址赋值给虚函数表指针。
+4. 一个类带有虚基类，会为子类和父类生成拷贝构造函数
