--- a/_posts/2020-3-4-JVM再探寻（一）.md
+++ b/_posts/2020-3-4-JVM再探寻（一）.md
@@ -22,3 +22,7 @@ Java程序对类的使用方式分为两种：
 
 所有的Java虚拟机实现必须在每个类或接口被Java程序**首次主动使用**才初始化他们
 
+对于静态字段来说，只有直接定义了该字段的类才会被初始化，当一个类在初始化时，其父类要求全部已经初始化完毕
+
+常量在编译阶段会存入道调用这个常量的方法所在的类的常量池中，本质上，调用类并没有直接引用到定义常量的类，因此并不会出发定义常量的类的初始化
+
