--- a/_posts/2020-3-6-Java并发编程（一）.md
+++ b/_posts/2020-3-6-Java并发编程（一）.md
@@ -1,10 +1,10 @@
 ---
-title: JVM并发编程（一）
+title: JVM并发编程（一）多线程基础
 key: 20200306
 tags: Java Concurrency
 ---
 
-## Java并发编程（一）
+## Java并发编程（一）多线程基础
 
 ### 守护线程
 
@@ -71,3 +71,49 @@ class A{
 ```
 
 对于非静态成员函数，锁加载对象a上面，对于静态成员函数，锁加载A.class上面。所以对于一个静态成员函数和一个非静态成员函数，都加synchronized关键字，它们是不互斥的。
+
+### happen-before
+
+![UOwykj.png](https://s1.ax1x.com/2020/07/23/UOwykj.png)
+
+为了解决缓存一致性协议对性能的巨大损耗，CPU的设计者在计算单元和L1之间增加了各种buffer。L1,L2,L3和主存之间是同步的，但是buffer和L1是异步的。也就是说网内存中写入一个变量，这个变量会保存在store buffer里面，稍后才会异步写入L1中，同时同步写入到主内存中。
+>所以volatile关键字所表示的内存可见性，反义词不是内存不可见，而是内存稍后可见
+
+store buffer的延迟写入是重排序的一种，成为内存重排序。除此之外还有编译器和CPU的指令重排序。
+
+* 编译器重排序，对于没有先后依赖关系的语句，编译器可以重新调整语句的执行顺序
+
+* CPU指令重排序，在指令集别，让没有依赖关系的多条指令并行执行
+
+* CPU内存重排序，CPU有自己的缓存，指令的执行顺序和写入内存的顺序不完全一致
+
+为了明确定义在多线程的场景下，什么时候可以重排序，什么时候不能，引入了JMM。为了描述JMM，引入和happen-before，使用happen-before来描述两个操作之间的内存可见性。也就是如果A happen-before B，那么意味着A的执行结果必须对B可见，也就是保证跨线程的内存可见性。
+
+### 内存屏障
+
+```java
+public final class Unsafe{
+    public native void loadFence();
+    public native void storeFence();
+    public native void fullFence();
+}
+```
+
+loadFence = LoadLoad + LoadStore
+storeFence = StoreStore + LoadStore
+fullFence = LoadFence + storeFence + storeLoad
+
+1. LoadLoad屏障：对于这样的语句Load1; LoadLoad; Load2，在Load2及后续读取操作要读取的数据被访问前，保证Load1要读取的数据被读取完毕。
+
+2. StoreStore屏障：对于这样的语句Store1; StoreStore; Store2，在Store2及后续写入操作执行前，保证Store1的写入操作对其它处理器可见。
+
+3. LoadStore屏障：对于这样的语句Load1; LoadStore; Store2，在Store2及后续写入操作被刷出前，保证Load1要读取的数据被读取完毕。
+
+4. StoreLoad屏障：对于这样的语句Store1; StoreLoad; Load2，在Load2及后续所有读取操作执行前，保证Store1的写入对所有处理器可见。它的开销是四种屏障中最大的。在大多数处理器的实现中，这个屏障是个万能屏障，兼具其它三种内存屏障的功能
+
+happen-before 规律总结
+
+* 单线程的每个操作，happen-before于该线程中任意后续操作
+* 对volatile变量的写，happen-before于后续对这个变量的读
+* 对synchronized的解锁，happen-before于后续对这个锁的解锁
+* 对final变量的写，happen-before于final域对象的读，happen-before于后续对finnal变量的读
