--- a/_posts/2020-3-9-Java并发编程（二）.md
+++ b/_posts/2020-3-9-Java并发编程（二）.md
@@ -7,4 +7,9 @@ tags: Java Concurrency
 ## Java并发编程（一）atomic
 
 ### ABA问题与解决方案
-如果另外一个线程把变量的值
+
+如果另外一个线程把变量的值从A改成B，再从B改成A，那么尽管修改过两次，可是当前线程做CAS操作的时候，却会认为值没有发生变化而认为数据没有被其他线程修改过，这就是所谓的ABA问题。为了解决这个问题，不仅要比较值，而且版本号，这正是AtomicStampedReference做的事情。在AtomicStampedReference中，除了先比较reference之外，还会对版本号stamp进行比较。这个stamp会在compareAndSet中指定。AtomicMarkableReference原理类似，不过版本号是boolean类型，只能大概率避免ABA问题，而不可以完全解决。
+
+### AtomicXXXFieldUpdater
+
+在一个已有的类中，在不改变其源代码的情况下，要实现对成员变量的原子操作，就有AtomicXXXFieldUpdator如此的对象。成员变量不能是包装类，并且必须为volatile类型。
