--- a/_posts/2020-3-9-Java并发编程（二）.md
+++ b/_posts/2020-3-9-Java并发编程（二）.md
@@ -1,5 +1,5 @@
 ---
-title: JVM并发编程（一）atomic
+title: JVM并发编程（二）atomic
 key: 20200309
 tags: Java Concurrency
 ---
@@ -13,3 +13,24 @@ tags: Java Concurrency
 ### AtomicXXXFieldUpdater
 
 在一个已有的类中，在不改变其源代码的情况下，要实现对成员变量的原子操作，就有AtomicXXXFieldUpdator如此的对象。成员变量不能是包装类，并且必须为volatile类型。
+
+### LongAddr
+
+AtomicLong内部是一个volatile long类型的变量，由多个线程对这个变量进行CAS操作，在高并发场景下仍不是很快，所以为了提高性能，采用了LongAddr这样的计数器。
+把一个变量拆成多分，分成多个变量，有点类似于ConcurrentHashMap的分段锁机制。多个线程并发累加的时候，如果并发程度很低，就直接加到base变量上；如果并发程度很高，冲突大，那么平摊到cell上，在最后取值的时候，再把base和这些cell求和计算。
+在sum求和函数中，并没有对cells[]数组进行加锁。也就是说，一边有线程对其执行求和操作，一边还有线程修改数组里的值，也就是最终一致性，而不是强一致性。同时在Cell类的定义中，还用到了一个独特的注解@sum.misc.Contended。这个注解在JKD8之后才存在，意思是说让变量填充到缓存行整行，这样在刷新变量的时候不会影响其他变量。下面是LongAddr的关键函数add()：
+
+```java
+public void add(long x) {
+    Cell[] as; long b, v; int m; Cell a;
+    if ((as = cells) != null || !casBase(b = base, b + x)) { //第一次尝试
+        boolean uncontended = true;
+        if (as == null || (m = as.length - 1) < 0 ||
+            (a = as[getProbe() & m]) == null ||              //因为Cell数组大小始终是2的整数次方，而且在运行中会不断扩容，所以
+            !(uncontended = a.cas(v = a.value, v + x)))      //第二次尝试
+            longAccumulate(x, null, uncontended);
+    }
+}
+```
+
+当一个线程调用add(x)上的时候，会首先尝试使用casBase把x加到base变量上。如果不成功，则再用a.cas()函数把x加到cell某个数组元素上。如果最后还不成功，调用longAccumulate()函数。
