--- a/_posts/2020-3-9-Java并发编程（三）.md
+++ b/_posts/2020-3-9-Java并发编程（三）.md
@@ -85,3 +85,114 @@ public class LockSupport{
 }
 ```
 
+在当前线程中调用park()，该线程就会被阻塞；在另外一个线程中，调用unpark(Thread t)，传入一个被阻塞的线程，就可以唤醒阻塞在park()地方的线程。尤其是unpark(Thread t)，它实现了一个线程对另一个线程的精确唤醒。而notifty()只是唤醒某一个线程，而无法具体唤醒某一个线程。
+针对要素4，在AQS中利用了一个双向链表和AQS实现了一个阻塞队列:
+
+```java
+
+public abstract class AbstractQueuedSynchronizer{
+    ...
+    static final class Node{
+        volatile Thread thread;
+        volatile Node next;
+        volatile Node prev;
+        ...
+    }
+    private transient volatile Node head;
+    private transient volatile Node tail;
+    ...
+}
+```
+
+通过这个双链表往其中不断添加阻塞的线程。
+
+### 公平性分析
+
+下面基于AQS， ReentrantLock在公平性和非公平性上实现的差异。
+
+```java
+
+final static class NonfairSync extends Sync{
+    ...
+    final void lock() {
+        if(compareAndSet(0,1)){ //一上来就尝试修改state值，也就是抢锁，不考虑队列中有没有其他线程在排队，是非公平的
+            setExclusiveOwnerThread(Thread.currentThread());
+        }else{
+            acquire(1);
+        }
+    }
+    ...
+}
+
+final static class FairSync extends Sync{
+    ...
+    final void lock() {
+        acquire(1);
+    }
+    ...
+}
+
+```
+
+acquire()是AQS的一个模板方法
+
+```java
+
+public final void acquire(int arg){
+    if(!tryAcquire(arg) && acquireQueued(addWaiter(Node.EXCLUSIVE), arg)){
+        selfInterrupt();
+    }
+}
+
+```
+
+tryAcquire()是一个虚函数，也就是再次尝试拿到锁，被NonfairSync与FairSync分别实现，下面看看他们有什么区别:
+
+```java
+
+abstract static class Sync extends AbstractQueuedSynchronizer {
+    final boolean nonfairTryAcquire(int acquires) {
+        final Thread current = Thread.currentThread();
+        int c = getState();
+        if (c == 0) {//无人持有锁，那么开始抢锁
+            if (compareAndSetState(0, acquires)) {
+                setExclusiveOwnerThread(current);
+                return true;
+            }
+        }
+        else if (current == getExclusiveOwnerThread()) {
+            int nextc = c + acquires;
+            if (nextc < 0) // overflow
+                throw new Error("Maximum lock count exceeded");
+            setState(nextc);
+            return true;
+        }
+        return false;
+    }
+}
+
+static final class FairSync extends Sync{
+    protected final boolean tryAcquire(int acquires) {
+        final Thread current = Thread.currentThread();
+        int c = getState();
+        if (c == 0) {
+            if (!hasQueuedPredecessors() &&
+                compareAndSetState(0, acquires)) {
+                setExclusiveOwnerThread(current);
+                return true;
+            }
+        }
+        else if (current == getExclusiveOwnerThread()) {
+            int nextc = c + acquires;
+            if (nextc < 0)
+                throw new Error("Maximum lock count exceeded");
+            setState(nextc);
+            return true;
+        }
+        return false;
+    }
+}
+
+```
+
+两者相比，就是公平lock()多了一个if(!hasQueuedPredecessors())。意思就是当c == 0，(没有线程持有锁)，并且排队到队列的第一个时，才去抢锁，否则继续排队，这才叫“公平”。
